--- a/recipes/salmon-papillote.html
+++ b/recipes/salmon-papillote.html
@@ -6,11 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li>
-        <a href="recipes/salmon-papillote.html">Salmon Papillote</a>
-      </li>
-    </ul>
+    <h1>Salmon Papillote</h1>
   </body>
 </html>
