Added recipe details
Added ingeredients as an unordered list, and recipe steps as an ordered list

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li>
-        <a href="recipes/salmon-papillote.html">Salmon Papillote</a>
+        <a href="recipes/salmon-papillote.html"
+          >Salmon Papillote with Vegetables</a
+        >
       </li>
     </ul>
   </body>
