Added links for credits
Added links to recipes / photo sources to salmon and lasagne recipes

--- a/recipes/salmon-papillote.html
+++ b/recipes/salmon-papillote.html
@@ -14,6 +14,15 @@
       width="500"
     />
     <p>
+      Photo credit
+      <a
+        href="https://www.jessicagavin.com/salmon-en-papillote-vegetables/"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Jessica Gavin</a
+      >
+    </p>
+    <p>
       <em
         >Salmon fillets atop fresh vegetables, wrapped in a parchment paper
         pouch and baked.</em
