--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -14,8 +14,13 @@
       width="890"
     />
     <p>
-      Recipe and photo credit from BBC Good Food
-      (https://www.bbc.co.uk/food/recipes/lasagne_82381)
+      Recipe and photo credit from
+      <a
+        href="https://www.bbc.co.uk/food/recipes/lasagne_82381"
+        target="_blank"
+        rel="noopener noreferrer"
+        >BBC Good Food</a
+      >
     </p>
     <p>
       <em
