--- a/recipes/tortilla.html
+++ b/recipes/tortilla.html
@@ -14,7 +14,8 @@
       width="400"
     />
     <p>
-      Recipe and photo credit<a
+      Recipe and photo credit
+      <a
         href="https://spanishsabores.com/best-spanish-omelet-recipe/"
         target="_blank"
         rel="noopener noreferrer"
