added basic styling boxes

--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li>
+    <h1 class="title">Odin Recipes</h1>
+    <ul id="recipe-list">
+      <li class="list-item" id="one">
         <a href="recipes/salmon-papillote.html"
           >Salmon Papillote with Vegetables</a
         >
       </li>
-      <li><a href="recipes/lasagne.html">Pork and Beef Lasagne</a></li>
-      <li><a href="recipes/tortilla.html">Spanish Tortilla</a></li>
+      <li class="list-item" id="two">
+        <a href="recipes/lasagne.html">Pork and Beef Lasagne</a>
+      </li>
+      <li class="list-item" id="three">
+        <a href="recipes/tortilla.html">Spanish Tortilla</a>
+      </li>
     </ul>
   </body>
 </html>
